Remove node_modules, add some includes to MANIFEST.in.
Signed-off-by: Rene Jochum <rene@jochums.at>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,5 @@ prune src/mockup-highlightjs/js/build
 exclude .bowerrc
 exclude Makefile
 global-exclude *.pyc
+include *.json
+include buildout.cfg
