--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mockup-highlightjs",
-  "version": "0.0.1",
+  "version": "1.0a1",
   "description": "Highlightjs for Plone",
   "homepage": "https://github.com/collective/mockup-highlightjs",
   "devDependencies": {
